Changes in 4.1.5

1)  More ruleset optimization.

2)  Make LOG_MARTIANS=Yes the default.

3)  Update modules file for 2.6.25.

4)  Restore 3.4 code to work around busybox limination.

5)  Add restriction handling in tcrules file.

6)  Fix designator table in Tc.pm.

Changes in 4.1.4

1)  Fix do_test() to accept 0 and to use the same mask as
    Shorewall-shell

2)  The compilation date recorded in the firewall.conf file produced by
    Shorewall-perl was previously mangled.

3)  Don't fully populate /etc/shorewall under Cygwin

4)  Fix the DNAT/REDIRECT fiasco.

5)  Allow interface lists in the masq and nat files.

6)  Allow loose match of interface names used in masq, nat and netmap.

7)  Allow loose match of interface names in match_source_dev().

8)  Implement 'sourceonly' host entry option.

9)  Make all non-firewall zones "complex".

Changes in 4.1.3

1)  Fix NFLOG/ULOG upcasing problem.

2)  Fix STARTUP_LOG without LOG_VERBOSITY.

3)  Fix LOG_VERBOSITY without STARTUP_LOG.

4)  Fall back to /bin/sh if SHOREWALL_SHELL isn't viable.

5)  Fix mis-handling of <interface>:<mac>

6)  Add better diagnostic when not running as root.

7)  Detect lack of interfaces and IPv4 zones.

8)  Classify marked traffic using tc filter rules.

9)  Allow installation on Cygwin.

Changes in 4.1.2

1)  Enhanced Operational Logging

2)  Fix undefined value when config file missing.

3)  Handle exit status 4 from iptables.

4)  Fix formatting of macro headings (again).

5)  Update sample shorewall.conf files with new options.

6)  Correct Jabber macro names.

7)  Tighten up HIGH_ROUTE_MARKS in the OUTPUT chain.

8)  Add 'nomarks' OPTION to tcdevices.

9)  Add COMMENTs to macros.

Changes in 4.1.1

1)  Fix ULOG/NFLOG output.

2)  Fix NFQUEUE(<queue-num>) in Policy file.

3)  Allow specifying an address in the Providers file.

Changes in 4.1.0.

1)  Add 'shared' provider option.

2)  Allow refresh of entire table and refresh mangle by default.

3)  Add NFLOG support.
