@@ -108,6 +108,9 @@ New Features in 4.1.5.
 3)  The /usr/share/shorewall/modules file has been updated to reflect
     module renaming in kernel 2.6.25.
 
+4)  Shorewall-perl now generates an error when a MAC address appears in
+    a traffic shaping rule in the OUTPUT or POSTROUTING chains.
+
 New Features in Shorewall 4.1.
 
 1)  Shorewall 4.1 contains experimental support for multiple Internet
