@@ -12,6 +12,9 @@ Changes in 4.1.5
 
 6)  Fix designator table in Tc.pm.
 
+7)  Generate an error when mac match is used in the POSTROUTING or
+    OUTPUT chains.
+
 Changes in 4.1.4
 
 1)  Fix do_test() to accept 0 and to use the same mask as
